// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating domain entity has merge property across namespaces and entity is wrong should have one validation failure 1`] = `"Merge directive UnknownEntity.PropertyName1 must be a valid path. Either the path is not to a mergeable type, or no property 'PropertyName1' was found"`;

exports[`when validating domain entity has merge property across namespaces and entity is wrong should have one validation failure 2`] = `
Object {
  "column": 10,
  "line": 22,
  "tokenText": "UnknownEntity",
}
`;

exports[`when validating domain entity has merge property and entity is wrong should have one validation failure: when validating domain entity has merge property and entity is wrong -> message 1`] = `"Merge directive UnknowEntity.PropertyName1 must be a valid path. Either the path is not to a mergeable type, or no property 'PropertyName1' was found"`;

exports[`when validating domain entity has merge property and entity is wrong should have one validation failure: when validating domain entity has merge property and entity is wrong -> sourceMap 1`] = `
Object {
  "column": 10,
  "line": 20,
  "tokenText": "UnknowEntity",
}
`;

exports[`when validating domain entity has merge property and property is wrong should have one validation failure: when validating domain entity has merge property and property is wrong -> message 1`] = `"Merge directive DomainEntityName1.UnknownProperty must be a valid path. Either the path is not to a mergeable type, or no property 'UnknownProperty' was found"`;

exports[`when validating domain entity has merge property and property is wrong should have one validation failure: when validating domain entity has merge property and property is wrong -> sourceMap 1`] = `
Object {
  "column": 10,
  "line": 20,
  "tokenText": "DomainEntityName1",
}
`;
